--- a/source/form.html
+++ b/source/form.html
@@ -8,7 +8,7 @@
   <body class="page">
     <header class="page__header header">
       <div class="header__content">
-        <a class="page__logo header__logo">
+        <a href="index.html" class="page__logo header__logo">
           <svg xmlns="http://www.w3.org/2000/svg" alt="Cat Energy" version="1.1" id="Layer_2" x="0px" y="0px" width="192" viewBox="0 0.002 190.4 37.598" style="enable-background:new 0 0 33.3 37.6;">
             <style type="text/css">
               .st0 {
@@ -32,7 +32,7 @@
               <path d="M14.7,22.6C14.7,22.6,14.7,22.6,14.7,22.6c-1.3,0-2.3-1.4-2.3-1.4c0-0.1,0-0.2,0-0.2c0.1,0,0.2,0,0.2,0c0,0,1,1.3,2.1,1.3&#10;    c0,0,0,0,0,0c0.6,0,1.1-0.3,1.6-1l0.1-0.2l0.1,0.2c0,0,0.4,0.8,1,0.8c0.5,0,1.1-0.4,1.6-1.3c0-0.1,0.1-0.1,0.2,0&#10;    c0.1,0,0.1,0.1,0,0.2c-0.6,1-1.3,1.4-1.9,1.4c-0.6,0-0.9-0.5-1.1-0.8C15.9,22.3,15.3,22.6,14.7,22.6z"/>
             </g>
             <path class="st1" d="M26.2,18.9c0,0-2.5,2.2-5.1,5.2S15.9,29,15.9,29c-0.2-0.5-1.6-1.5-1.6-1.5s-3.1-2.1-5.2-3.8&#10;  c-1.2-1-2.3-2.2-3.1-3c-0.3,0-1.1-0.1-2-0.1c4.7,7,12,8.8,12,8.8c0.9-0.1,3.3-1.9,5.1-3.3c1.8-1.4,4.8-4.5,5.9-5.9&#10;  c0.6-0.7,0.9-1.4,1.1-2C27,18.6,26.2,18.9,26.2,18.9z"/>
-            <g transform="matrix(1, 0, 0, 1, 90, 10.200001)">
+            <g transform="matrix(1, 0, 0, 1, 90, 10.2)">
               <path class="st0" d="M1.2,16.6c-0.8-1-1.2-2.5-1.2-4.4V5.9c0-1.9,0.4-3.4,1.2-4.4C2,0.5,3.4,0,5.4,0c1.9,0,3.2,0.4,4,1.3&#10;    c0.8,0.9,1.2,2.1,1.2,3.8v1.5H6.6V4.8c0-0.7-0.1-1.2-0.2-1.6C6.3,2.9,5.9,2.7,5.4,2.7S4.4,2.9,4.3,3.3C4.1,3.7,4,4.2,4,4.9v8.3&#10;    c0,0.7,0.1,1.2,0.3,1.6c0.2,0.4,0.5,0.6,1.1,0.6c0.5,0,0.9-0.2,1-0.6c0.2-0.4,0.2-0.9,0.2-1.6v-1.8h3.9v1.5c0,1.6-0.4,2.9-1.2,3.9&#10;    c-0.8,0.9-2.1,1.4-4,1.4C3.4,18.1,2,17.6,1.2,16.6z" style="fill: rgb(17, 17, 17);"/>
               <path class="st0" d="M15.2,0.2h4.5L23,17.8h-3.6l-0.6-3.7h-2.6l-0.6,3.7h-3.7L15.2,0.2z M18.4,11.8l-0.9-6.9l-0.9,6.9H18.4z" style="fill: rgb(17, 17, 17);"/>
               <path class="st0" d="M25.8,3.1h-2.7V0.2h9.3v2.9h-2.7v14.7h-4V3.1z" style="fill: rgb(17, 17, 17);"/>
@@ -71,59 +71,29 @@
     <footer class="page__footer footer">
       <div class="footer__content">
         <div class="footer__logo">
-          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="128" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 127.8 23.4" style="enable-background:new 0 0 127.8 23.4;" xml:space="preserve">
-            <style type="text/css">
-              .st0 {
-                fill: #111111;
-              }
-            </style>
-            <g>
-              <path class="st0" d="M1.6,21.5c-1-1.3-1.6-3.2-1.6-5.6V7.6c0-2.5,0.5-4.4,1.5-5.7C2.6,0.6,4.3,0,6.8,0c2.4,0,4.1,0.6,5.1,1.7     c1,1.1,1.5,2.8,1.5,4.9v2H8.5V6.3c0-0.9-0.1-1.6-0.3-2S7.6,3.5,6.8,3.5c-0.7,0-1.2,0.2-1.4,0.7S5.1,5.5,5.1,6.4v10.7     c0,0.9,0.1,1.6,0.4,2.1c0.2,0.5,0.7,0.7,1.4,0.7c0.7,0,1.1-0.2,1.3-0.7c0.2-0.5,0.3-1.2,0.3-2.1v-2.4h4.9v2c0,2.1-0.5,3.8-1.5,5     c-1,1.2-2.7,1.8-5.1,1.8C4.4,23.4,2.6,22.8,1.6,21.5z"/>
-              <path class="st0" d="M19.3,0.3h5.7l4.2,22.8h-4.6l-0.8-4.8h-3.3l-0.8,4.8H15L19.3,0.3z M23.4,15.3l-1.2-8.9L21,15.3H23.4z"/>
-              <path class="st0" d="M32.7,4.1h-3.4V0.3h11.9v3.7h-3.4v19.1h-5.1V4.1z"/>
-              <path class="st0" d="M50.3,0.3h8.8v2.4h-5.7v7.5h4.6v2.3h-4.6v8.4h5.7v2.3h-8.9V0.3z"/>
-              <path class="st0" d="M61.7,0.3h2.2l6.5,15.1V0.3h2.6v22.8h-2L64.4,7.5v15.6h-2.7V0.3z"/>
-              <path class="st0" d="M76,0.3h8.8v2.4h-5.7v7.5h4.6v2.3h-4.6v8.4h5.7v2.3H76V0.3z"/>
-              <path class="st0" d="M87.4,0.3H92c2.3,0,4,0.5,5.1,1.4c1.1,0.9,1.6,2.5,1.6,4.6c0,2.9-0.9,4.7-2.8,5.3l3.2,11.4H96l-3-10.7h-2.5     v10.7h-3.2V0.3z M91.8,10.1c1.4,0,2.3-0.3,2.9-0.8c0.6-0.5,0.9-1.5,0.9-3c0-0.9-0.1-1.7-0.3-2.2c-0.2-0.5-0.6-0.9-1.1-1.2     c-0.5-0.3-1.3-0.4-2.2-0.4h-1.4v7.5H91.8z"/>
-              <path class="st0" d="M102.7,21.4c-0.9-1.3-1.4-3.2-1.4-5.8V8c0-1.8,0.2-3.2,0.5-4.3c0.4-1.1,1-2,1.9-2.6s2.1-0.9,3.7-0.9     c2.1,0,3.6,0.5,4.5,1.6s1.4,2.7,1.4,5v0.8h-3V6.9c0-1.1-0.1-1.9-0.2-2.5c-0.1-0.6-0.4-1-0.8-1.3c-0.4-0.3-1-0.5-1.9-0.5     c-0.9,0-1.5,0.2-2,0.6s-0.7,0.9-0.8,1.6s-0.2,1.6-0.2,2.7V16c0,1.7,0.2,3,0.6,3.8c0.4,0.8,1.2,1.1,2.4,1.1c1.2,0,2-0.4,2.4-1.2     c0.4-0.8,0.7-2.1,0.7-4v-1.6h-2.9v-2.3h5.8v11.3h-2l-0.3-2.6c-0.7,1.9-2.1,2.9-4.1,2.9C105.1,23.4,103.6,22.7,102.7,21.4z"/>
-              <path class="st0" d="M119.8,15.1l-4.9-14.7h3l3.5,11l3.4-11h3l-4.9,14.7v8h-3V15.1z"/>
-            </g>
-          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="Layer_1" x="0" y="0" viewBox="0 0 127.8 23.4" width="128" xml:space="preserve"><path class="st0" d="M1.6 21.5C.6 20.2 0 18.3 0 15.9V7.6c0-2.5.5-4.4 1.5-5.7C2.6.6 4.3 0 6.8 0c2.4 0 4.1.6 5.1 1.7s1.5 2.8 1.5 4.9v2H8.5V6.3c0-.9-.1-1.6-.3-2s-.6-.8-1.4-.8c-.7 0-1.2.2-1.4.7s-.3 1.3-.3 2.2v10.7c0 .9.1 1.6.4 2.1.2.5.7.7 1.4.7s1.1-.2 1.3-.7c.2-.5.3-1.2.3-2.1v-2.4h4.9v2c0 2.1-.5 3.8-1.5 5-1 1.2-2.7 1.8-5.1 1.8-2.4-.1-4.2-.7-5.2-2zM19.3.3H25l4.2 22.8h-4.6l-.8-4.8h-3.3l-.8 4.8H15L19.3.3zm4.1 15l-1.2-8.9-1.2 8.9h2.4zM32.7 4.1h-3.4V.3h11.9V4h-3.4v19.1h-5.1v-19zM50.3.3h8.8v2.4h-5.7v7.5H58v2.3h-4.6v8.4h5.7v2.3h-8.9V.3zM61.7.3h2.2l6.5 15.1V.3H73v22.8h-2L64.4 7.5v15.6h-2.7V.3zM76 .3h8.8v2.4h-5.7v7.5h4.6v2.3h-4.6v8.4h5.7v2.3H76V.3zM87.4.3H92c2.3 0 4 .5 5.1 1.4 1.1.9 1.6 2.5 1.6 4.6 0 2.9-.9 4.7-2.8 5.3L99.1 23H96l-3-10.7h-2.5V23h-3.2V.3zm4.4 9.8c1.4 0 2.3-.3 2.9-.8.6-.5.9-1.5.9-3 0-.9-.1-1.7-.3-2.2-.2-.5-.6-.9-1.1-1.2-.5-.3-1.3-.4-2.2-.4h-1.4V10h1.2zM102.7 21.4c-.9-1.3-1.4-3.2-1.4-5.8V8c0-1.8.2-3.2.5-4.3.4-1.1 1-2 1.9-2.6s2.1-.9 3.7-.9c2.1 0 3.6.5 4.5 1.6s1.4 2.7 1.4 5v.8h-3v-.7c0-1.1-.1-1.9-.2-2.5-.1-.6-.4-1-.8-1.3-.4-.3-1-.5-1.9-.5-.9 0-1.5.2-2 .6s-.7.9-.8 1.6-.2 1.6-.2 2.7V16c0 1.7.2 3 .6 3.8.4.8 1.2 1.1 2.4 1.1s2-.4 2.4-1.2c.4-.8.7-2.1.7-4v-1.6h-2.9v-2.3h5.8v11.3h-2l-.3-2.6c-.7 1.9-2.1 2.9-4.1 2.9-1.9 0-3.4-.7-4.3-2zM119.8 15.1L114.9.4h3l3.5 11 3.4-11h3l-4.9 14.7v8h-3v-8z"/></svg>
         </div>
         <ul class="social">
           <li class="social__item">
             <a href="https://vk.com/htmlacademy" class="social__link">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
-                <path d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2  c0,0.1,0,0.6-0.3,0.9c-0.3,0.3-0.8,0.4-0.9,0.4h-1.4c-0.7,0-3.2-0.2-5.4-2.3C2.5,7.1,0.2,2.2,0.1,2C0,1.6-0.1,1.2,0.2,0.9  s0.8-0.4,1-0.4h3.1c0.1,0,0.4,0.1,0.7,0.3C5.3,1,5.4,1.3,5.5,1.4c0.7,1.5,1.5,2.8,2.6,4C8.2,5,8.3,4,8.2,3.1c0-0.4-0.1-0.8-0.2-1  C7.9,2,7.7,1.9,7.5,1.9L6.9,1.4c0-0.5,0.5-0.9,0.9-1.1C8.3,0.1,9.1,0,10.1,0h0.5c0.9,0,1.2,0.1,1.6,0.1c1.2,0.3,1.2,1.3,1.1,2.5v1.6  c0,0.3,0,0.8,0.1,1c0.2-0.1,0.6-0.5,1.5-1.9c0.6-0.9,1-1.9,1.1-2.1c0.1-0.3,0.4-0.7,1.2-0.7h3.4c0.7,0,1.2,0.2,1.3,0.7  c0.2,0.5,0.1,1.3-1.7,3.5c-0.3,0.3-0.5,0.6-0.7,0.9c-0.5,0.4-0.9,1-0.9,1.1s0.5,0.5,0.9,0.9c1.1,0.9,1.9,1.7,2.2,2.3  c0.4,0.6,0.3,1,0.2,1.3c-0.3,0.7-1.2,0.7-1.4,0.8h-2.8C17.7,12,17.6,12,17.6,12z M13.7,8.3c0.7,0,1.2,0.6,1.8,1.2  c0.4,0.4,0.7,0.8,1.1,1c0.5,0.3,1,0.3,1,0.3h2.9c0.1,0,0.3-0.1,0.4-0.1c0,0,0-0.1-0.1-0.1c-0.3-0.5-1-1.3-2-2.1  c-0.9-0.7-1.3-1.1-1.4-1.7c0-0.6,0.4-1.1,1.2-2.1c0.2-0.2,0.4-0.5,0.7-0.8c1.1-1.4,1.4-2,1.5-2.3h-3.9c0,0.4-0.5,1.5-1.1,2.4  c-1.4,2.1-2,2.4-2.5,2.4c-0.1,0-0.3,0-0.4-0.1c-0.7-0.4-0.7-1.4-0.7-2.1V3.9V2.6c0.1-1.3,0-1.3-0.3-1.4c-0.3-0.1-0.5-0.1-1.4-0.1H10  c-0.5,0-1,0-1.4,0.1l0.2,0.2c0.4,0.5,0.4,1.5,0.4,1.7c0.1,1.3,0,2.9-0.7,3.3c-0.1,0-0.2,0.1-0.4,0.1C7.5,6.5,6.8,5.8,5.6,4  C5,2.9,4.5,1.8,4.5,1.8s0-0.1-0.1-0.1S4.2,1.6,4.2,1.6H1.3H1.2c0.4,0.9,2.5,5,4.8,7.2c2,1.9,4.3,2,4.7,2h1.4c0,0,0.2,0,0.2-0.1v-0.1  c0-0.2,0-2,1.2-2.3C13.5,8.3,13.7,8.3,13.7,8.3z"/>
-              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22 12" width="16" height="16"><path d="M17.6 12c-.3 0-.9-.1-1.5-.5-.5-.3-.9-.7-1.3-1.2-.3-.3-.9-.9-1.1-.9-.2.1-.4.7-.3 1.2 0 .1 0 .6-.3.9-.3.3-.8.4-.9.4h-1.4c-.7 0-3.2-.2-5.4-2.3C2.5 7.1.2 2.2.1 2 0 1.6-.1 1.2.2.9s.8-.4 1-.4h3.1c.1 0 .4.1.7.3.3.2.4.5.5.6.7 1.5 1.5 2.8 2.6 4 .1-.4.2-1.4.1-2.3 0-.4-.1-.8-.2-1-.1-.1-.3-.2-.5-.2l-.6-.5c0-.5.5-.9.9-1.1.5-.2 1.3-.3 2.3-.3h.5c.9 0 1.2.1 1.6.1 1.2.3 1.2 1.3 1.1 2.5v1.6c0 .3 0 .8.1 1 .2-.1.6-.5 1.5-1.9.6-.9 1-1.9 1.1-2.1.1-.3.4-.7 1.2-.7h3.4c.7 0 1.2.2 1.3.7.2.5.1 1.3-1.7 3.5-.3.3-.5.6-.7.9-.5.4-.9 1-.9 1.1s.5.5.9.9c1.1.9 1.9 1.7 2.2 2.3.4.6.3 1 .2 1.3-.3.7-1.2.7-1.4.8h-2.8-.1zm-3.9-3.7c.7 0 1.2.6 1.8 1.2.4.4.7.8 1.1 1 .5.3 1 .3 1 .3h2.9c.1 0 .3-.1.4-.1 0 0 0-.1-.1-.1-.3-.5-1-1.3-2-2.1-.9-.7-1.3-1.1-1.4-1.7 0-.6.4-1.1 1.2-2.1.2-.2.4-.5.7-.8 1.1-1.4 1.4-2 1.5-2.3h-3.9c0 .4-.5 1.5-1.1 2.4-1.4 2.1-2 2.4-2.5 2.4-.1 0-.3 0-.4-.1-.7-.4-.7-1.4-.7-2.1V2.6c.1-1.3 0-1.3-.3-1.4-.3-.1-.5-.1-1.4-.1H10c-.5 0-1 0-1.4.1l.2.2c.4.5.4 1.5.4 1.7.1 1.3 0 2.9-.7 3.3-.1 0-.2.1-.4.1-.6 0-1.3-.7-2.5-2.5C5 2.9 4.5 1.8 4.5 1.8s0-.1-.1-.1-.2-.1-.2-.1h-3c.4.9 2.5 5 4.8 7.2 2 1.9 4.3 2 4.7 2h1.4s.2 0 .2-.1v-.1c0-.2 0-2 1.2-2.3h.2z"/></svg>
             </a>
           </li>
           <li class="social__item">
             <a href="https://www.instagram.com/htmlacademy" class="social__link">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 16.1 16" style="enable-background:new 0 0 16.1 16;" xml:space="preserve">
-                <style type="text/css">
-                  .st0{fill:#231F20;}
-                </style>
-                <path class="st0" d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1H11.8   M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0z"/>
-                <path class="st0" d="M8,4.9c1.7,0,3.1,1.4,3.1,3.1S9.7,11.1,8,11.1S4.9,9.7,4.9,8S6.3,4.9,8,4.9 M8,3.9C5.7,3.9,3.9,5.7,3.9,8  s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z"/>
-                <circle class="st0" cx="12.3" cy="3.7" r="0.9"/>
-              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" version="1.1" id="Layer_1" x="0" y="0" viewBox="0 0 16.1 16" xml:space="preserve"><path class="st0" d="M11.8 1C13.6 1 15 2.4 15 4.2v7.7c0 1.7-1.4 3.1-3.1 3.1H4.2C2.4 15 1 13.6 1 11.8V4.2C1 2.4 2.4 1 4.2 1h7.6m0-1H4.2C1.9 0 0 1.9 0 4.2v7.7C0 14.1 1.9 16 4.2 16h7.7c2.3 0 4.2-1.9 4.2-4.2V4.2C16 1.9 14.1 0 11.8 0z"/><path class="st0" d="M8 4.9c1.7 0 3.1 1.4 3.1 3.1S9.7 11.1 8 11.1 4.9 9.7 4.9 8 6.3 4.9 8 4.9m0-1C5.7 3.9 3.9 5.7 3.9 8s1.8 4.1 4.1 4.1 4.1-1.8 4.1-4.1S10.3 3.9 8 3.9z"/><circle class="st0" cx="12.3" cy="3.7" r=".9"/></svg>
             </a>
           </li>
           <li class="social__item">
             <a href="https://ru-ru.facebook.com/htmlacademy" class="social__link">
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16" height="16" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
-                <path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18  h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18  z"/>
-              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 19" width="16" height="16"><path d="M7.1 19H2v-8.8H0V5.8h1.9c-.1-2 .2-3.4 1.1-4.4C3.8.5 5 .1 6.5 0H10v4.2H7.2c-.1.2-.2.8-.2 1.6h3v4.4H7.1V19zm-4-1h2.8V9.1h2.9V6.8H5.9v-.5c0-1.4 0-2.6.7-3.1l.1-.1h2.1V1H6.5c-1.2.1-2 .4-2.6 1-.8.8-1 2.3-.8 4.2l.1.6H1.1v2.3h2V18z"/></svg>
             </a>
           </li>
         </ul>
         <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright">
           <span class="copyright__text">HTML Academy</span>
           <div class="copyright__image">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60">
-              <path fill="#2E368F" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path d="M30.2 5H30L10.3 7.1v36.2L30 55l19.7-11.7V7.1L30.2 5zm17 36.8L30 52 12.8 41.8V27l17.1 10.2V39l-11.7-7v1.8L30 40.9v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8L29.9 12.8 12.8 23V9.4L30 7.6l17.2 1.8V23z"/></svg>
           </div>
         </a>
       </div>
